little change to check sth

--- a/InzApp/templates/InzApp/layout.html
+++ b/InzApp/templates/InzApp/layout.html
@@ -68,7 +68,7 @@
 						<li><a href="{% url 'moje_publikacje' %}">Moje publikacje</a></li>
 						<li><a href="{% url 'dodaj_publikacje' %}">Dodaj publikację</a></li>
 						<li><a href="#"><i class="fa fa-object-group fa-fw fa-lg"></i>
-						Kolekcje-</a></li>
+						Kolekcje</a></li>
 						<li><a href="{% url 'moje_kolekcje' %}">Moje kolekcje</a></li>
 						<li><a href="{% url 'dodaj_kolekcje' %}">Dodaj kolekcję</a></li>
 						
