change favico path

--- a/InzApp/templates/InzApp/layout.html
+++ b/InzApp/templates/InzApp/layout.html
@@ -3,7 +3,7 @@
 	{% load i18n %}
 	{% get_current_language as LANGUAGE_CODE %}
 	
-	<link rel="icon" href="{% static 'InzApp/fav.ico' %}" type="image/x-icon" />
+	<link rel="icon" href="{% static 'images/fav.ico' %}" type="image/x-icon" />
 	
 	{% load staticfiles %}
 	<link rel="stylesheet" type="text/css" href="{% static 'InzApp/style.css' %}" />
