edit url strona glowna

--- a/InzApp/templates/InzApp/layout.html
+++ b/InzApp/templates/InzApp/layout.html
@@ -98,7 +98,7 @@
 	</div>
 	<div id="stopka">
 		System powstał w wyniku realizacji pracy dyplomowej na Wydziale Informatyki Politechniki Białostockiej.<br />
-		<i class="fa fa-copyright fa-fw"></i>Anna Wejkowska 2015/2016
+		<i class="fa fa-copyright fa-fw"></i>Anna Wejkowska 2016
 	</div>
 </body>
 </html>
