--- a/InzApp/templates/InzApp/rejestracja.html
+++ b/InzApp/templates/InzApp/rejestracja.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 	{% load staticfiles %}
+	<link rel="icon" href="{% static 'images/fav.ico' %}" type="image/x-icon" />
+	
 	<link rel="stylesheet" type="text/css" href="{% static 'InzApp/style.css' %}" />
 	
 	<link rel="stylesheet" href="{% static 'InzApp/font-awesome-4.5.0/css/font-awesome.min.css' %}">
