edit logowanie site and css

--- a/InzApp/templates/InzApp/logowanie.html
+++ b/InzApp/templates/InzApp/logowanie.html
@@ -43,6 +43,14 @@
 					<td></td>
 					<td><a href="{% url 'rejestracja' %}" >Zarejestruj</a></td>
 				</tr>
+				<tr><td colspan="2">&nbsp; </td></tr>
+				<tr>
+					<td colspan="2" class="stopka_logowania">
+						System powstał w wyniku realizacji pracy dyplomowej <br>
+						  na Wydziale Informatyki Politechniki Białostockiej.<br>
+						<i class="fa fa-copyright fa-fw"></i>Anna Wejkowska 2016
+					</td>
+				</tr>
 			</form>
 		</table>
 	</div>
