--- a/InzApp/static/InzApp/style.css
+++ b/InzApp/static/InzApp/style.css
@@ -514,6 +514,15 @@ input[type="submit"].primary:disabled {
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
+.okno_logowania > tr {
+	text-align: center;
+}
+
+.stopka_logowania {
+	font-size:11px; 
+	text-align: center; 
+	color: #4B6BAF;
+}
 
 
 
