edit rejestracja site

--- a/InzApp/templates/InzApp/logowanie.html
+++ b/InzApp/templates/InzApp/logowanie.html
@@ -36,12 +36,10 @@
 					<td><input type="password" name="logowanie_haslo" id="logowanie_haslo" required></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td><input type="submit" class="primary" value="Zaloguj"></td>
+					<td colspan="2"><input type="submit" class="primary" value="Zaloguj"></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td><a href="{% url 'rejestracja' %}" >Zarejestruj</a></td>
+					<td colspan="2"><a href="{% url 'rejestracja' %}" >Zarejestruj</a></td>
 				</tr>
 				<tr><td colspan="2">&nbsp; </td></tr>
 				<tr>
