--- a/InzApp/templates/InzApp/rejestracja.html
+++ b/InzApp/templates/InzApp/rejestracja.html
@@ -45,8 +45,15 @@
 					<td><input type="text" name="rejestracja_email" id="rejestracja_email"></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td><input type="submit" class="primary" value="Zarejestruj"></td>
+					<td colspan="2"><input type="submit" class="primary" value="Zarejestruj"></td>
+				</tr>
+				<tr><td colspan="2">&nbsp; </td></tr>
+				<tr>
+					<td colspan="2" class="stopka_logowania">
+						System powstał w wyniku realizacji pracy dyplomowej <br>
+						  na Wydziale Informatyki Politechniki Białostockiej.<br>
+						<i class="fa fa-copyright fa-fw"></i>Anna Wejkowska 2016
+					</td>
 				</tr>
 			</form>
 		</table>
