edit rejestracja site 2

--- a/InzApp/templates/InzApp/rejestracja.html
+++ b/InzApp/templates/InzApp/rejestracja.html
@@ -47,6 +47,9 @@
 				<tr>
 					<td colspan="2"><input type="submit" class="primary" value="Zarejestruj"></td>
 				</tr>
+				<tr>
+					<td colspan="2"><a href="{% url 'logowanie' %}" ><i class="fa fa-arrow-left"></i> Powrót</a></td>
+				</tr>
 				<tr><td colspan="2">&nbsp; </td></tr>
 				<tr>
 					<td colspan="2" class="stopka_logowania">
