edit rejestracja site 3

--- a/InzApp/templates/InzApp/rejestracja.html
+++ b/InzApp/templates/InzApp/rejestracja.html
@@ -48,7 +48,7 @@
 					<td colspan="2"><input type="submit" class="primary" value="Zarejestruj"></td>
 				</tr>
 				<tr>
-					<td colspan="2"><a href="{% url 'logowanie' %}" ><i class="fa fa-arrow-left"></i> Powrót</a></td>
+					<td colspan="2"><a href="{% url 'logowanie' %}" ><i class="fa fa-caret-left"></i> Powrót</a></td>
 				</tr>
 				<tr><td colspan="2">&nbsp; </td></tr>
 				<tr>
