--- a/InzApp/templates/InzApp/pola_wyszukiwania.html
+++ b/InzApp/templates/InzApp/pola_wyszukiwania.html
@@ -36,14 +36,19 @@
 		<table>
 			<form action="{% url 'wyniki_wyszukiwania' %}" method="POST" target="_blank">
 				<tr>
-					<td colspan="2">
-						<input type="text" placeholder="tytuł" name="p_tytul" />
-					</td>
+					<td>Tytuł</td>
 					<td>
-						<input type="text" placeholder="autor" name="p_autor" />
+						<input type="text" placeholder="tytuł" name="p_tytul" style="width: 500px;" />
 					</td>
 				</tr>
 				<tr>
+					<td>Autor</td>
+					<td>
+						<input type="text" placeholder="autor" name="p_autor" style="width: 500px;" />
+					</td>
+				</tr>
+				<tr>
+					<td>Rodzaj</td>
 					<td>
 						<select name="p_rodzaj" id="p_rodzaj">
 						<option value="dowolny">dowolny rodzaj</option>
@@ -52,6 +57,9 @@
 						{% endfor %}
 						</select>
 					</td>
+				</tr>
+				<tr>
+					<td>Dziedzina</td>
 					<td>
 						<select name="p_dziedzina" id="p_dziedzina" style="width: 200px;">
 						<option value="dowolny">dowolna dziedzina</option>
@@ -60,6 +68,9 @@
 						{% endfor %}
 						</select>
 					</td>
+				</tr>
+				<tr>
+					<td>Język</td>
 					<td>
 						<select name="p_jezyk" id="p_jezyk" style="width: 150px;">
 						<option value="dowolny">dowolny język</option>
@@ -70,12 +81,19 @@
 					</td>
 				</tr>
 				<tr>
+					<td>Słowo kluczowe</td>
 					<td>
-						<input type="text" placeholder="słowo kluczowe" name="p_kluczowe" />
+						<input type="text" placeholder="słowo kluczowe" name="p_kluczowe" style="width: 500px;" />
 					</td>
+				</tr>
+				<tr>
+					<td>Opis</td>
 					<td>
-						<input type="text" placeholder="opis" name="p_opis" />
+						<input type="text" placeholder="opis" name="p_opis" style="width: 500px;" />
 					</td>
+				</tr>
+				<tr>
+					<td></td>
 					<td>
 						<input type="submit" class="primary" value="Szukaj" />
 					</td>
