--- a/InzApp/templates/InzApp/publikacja.html
+++ b/InzApp/templates/InzApp/publikacja.html
@@ -33,7 +33,7 @@
 	<!--{{ czy_publiczna }}-->
 	
 	<h3>{{ tytul }}</h3>
-	<i>{{ autor }}</i>
+	<i>{{ autor.encode('utf-8') }}</i>
 	<br><br>
 
 	<table>
