--- a/InzApp/templates/InzApp/moje_publikacje.html
+++ b/InzApp/templates/InzApp/moje_publikacje.html
@@ -65,7 +65,7 @@
 				</td>
 				<td>
 					<a href="{% url 'publikacja' publikacja.id %}"><i class="fa fa-eye"></i> Zobacz</a>
-					<a href="{% url 'usun_publikacje' publikacja.id %}"><i class="fa fa-pencil"></i> Edytuj</a>
+					<a href="{% url 'edytuj_publikacje' publikacja.id %}"><i class="fa fa-pencil"></i> Edytuj</a>
 					<a href="{% url 'usun_publikacje' publikacja.id %}"><i class="fa fa-trash-o"></i> Usuń</a>
 				</td>
 			</tr>
