textarea mode on

--- a/InzApp/templates/InzApp/dodaj_kolekcje.html
+++ b/InzApp/templates/InzApp/dodaj_kolekcje.html
@@ -34,7 +34,7 @@
 				</tr>
 				<tr>
 					<td>Opis</td>
-					<td><input type="text" name="nowa_kolekcja_opis"></td>
+					<td><textarea name="nowa_kolekcja_opis"></textarea></td>
 				</tr>
 				<tr>
 					<td></td>
