--- a/InzApp/templates/InzApp/dodaj_publikacje.html
+++ b/InzApp/templates/InzApp/dodaj_publikacje.html
@@ -196,29 +196,34 @@
 				</tr>
 				<tr>
 					<td>Opis</td>
-					<td><input type="text" name="nowa_publikacja_opis" class="pole_tekstowe" /></td>
+					<td>
+					<textarea name="nowa_publikacja_opis"></textarea>
+					</td>
 				</tr>
 				<tr>
 					<td>Słowa kluczowe</td>
 					<td>
-					<input type="text" name="nowa_publikacja_slowa_kluczowe" class="pole_tekstowe" />
+					<input type="text" name="nowa_publikacja_slowa_kluczowe" class="pole_tekstowe" style="width: 500px;" />
 					<a tip="Wprowadź słowa kluczowe oddzielając je przecinkami." class="tooltip">
 					<i class="fa fa-question-circle"></i>
 					</a>
 					</td>
 				</tr>
-				<tr>
-					<td></td>
-					<td><input type="checkbox" name="nowa_publikacja_czy_publiczna"> publiczna</td>
-				</tr>
+				
 				<tr>
 					<td>URL</td>
-					<td><input type="text" name="nowa_publikacja_url" class="pole_tekstowe" /></td>
+					<td><input type="text" name="nowa_publikacja_url" class="pole_tekstowe" style="width: 500px;" /></td>
 				</tr>
 				<tr>
 					<td>Plik</td>
 					<td><input type="file" name="nowa_publikacja_plik" /></td>
 				</tr>
+				
+				<tr>
+					<td></td>
+					<td><input type="checkbox" name="nowa_publikacja_czy_publiczna"> publiczna</td>
+				</tr>
+				
 				<tr>
 					<td></td>
 					<td><input type="submit" value="Dodaj"></td>
