--- a/InzApp/templates/InzApp/edytuj_kolekcje.html
+++ b/InzApp/templates/InzApp/edytuj_kolekcje.html
@@ -42,7 +42,7 @@
 				</tr>
 				<tr>
 					<td>Opis</td>
-					<td><input type="text" name="edytuj_kolekcje_opis" value="{{ kolekcja.opis }}"></td>
+					<td><textarea name="edytuj_kolekcje_opis">{{ kolekcja.opis }}</textarea></td>
 				</tr>
 				<tr>
 					<td></td>
