--- a/InzApp/templates/InzApp/edytuj_publikacje.html
+++ b/InzApp/templates/InzApp/edytuj_publikacje.html
@@ -37,7 +37,7 @@
 	{% block strona %}
 	
 	<script>
-		ustaw_aktywny_w_menu(3);
+		ustaw_aktywny_w_menu(2);
 	</script> 
 	
 	<div class="edytuj_publikacje_select2_form">
@@ -198,9 +198,7 @@
 				<tr>
 					<td>Opis</td>
 					<td>
-					<textarea name="edytuj_publikacje_opis">
-					{{ publikacja.opis }}
-					</textarea>
+					<textarea name="edytuj_publikacje_opis">{{ publikacja.opis }}</textarea>
 					</td>
 				</tr>
 				<tr>
@@ -212,14 +210,7 @@
 					</a>
 					</td>
 				</tr>
-				<tr>
-					<td></td>
-					<td>
-					<input type="checkbox" name="edytuj_publikacje_czy_publiczna"
-					{% if publikacja.czy_publiczna == True %} checked {% endif %}
-					> publiczna
-					</td>
-				</tr>
+				
 				<tr>
 					<td>URL</td>
 					<td><input type="text" name="edytuj_publikacje_url" class="pole_tekstowe" style="width: 500px;" /></td>
@@ -228,6 +219,16 @@
 					<td>Plik</td>
 					<td><input type="file" name="edytuj_publikacje_plik" /></td>
 				</tr>
+				
+				<tr>
+					<td></td>
+					<td>
+					<input type="checkbox" name="edytuj_publikacje_czy_publiczna"
+					{% if publikacja.czy_publiczna == True %} checked {% endif %}
+					> publiczna
+					</td>
+				</tr>
+				
 				<tr>
 					<td></td>
 					<td><input type="submit" value="Zapisz zmiany"></td>
