--- a/InzApp/templates/InzApp/edytuj_kolekcje.html
+++ b/InzApp/templates/InzApp/edytuj_kolekcje.html
@@ -54,7 +54,7 @@
 				</tr>
 				<tr>
 					<td></td>
-					<td><input type="submit" value="Zapisz zmiany"></td>
+					<td><input type="submit" class="primary" value="Zapisz zmiany"></td>
 				</tr>
 			</form>
 		</table>
