--- a/InzApp/templates/InzApp/dodaj_kolekcje.html
+++ b/InzApp/templates/InzApp/dodaj_kolekcje.html
@@ -42,7 +42,7 @@
 				</tr>
 				<tr>
 					<td></td>
-					<td><input type="submit" value="Dodaj"></td>
+					<td><input type="submit" class="primary" value="Dodaj"></td>
 				</tr>
 			</form>
 		</table>
