add some tooltips

--- a/InzApp/templates/InzApp/moje_publikacje.html
+++ b/InzApp/templates/InzApp/moje_publikacje.html
@@ -34,6 +34,12 @@
 	</script> 
 	
 	<div>
+		<div style="text-align: right;">
+			<a href="{% url 'dodaj_publikacje' %}">
+				<i class="fa fa-plus-square"></i> Dodaj publikację
+			</a>
+		</div>
+				
 		<table class="tablesorter" id="moje_publikacje"> 
 			<thead>
 			<tr>
