--- a/InzApp/templates/InzApp/uzytkownicy.html
+++ b/InzApp/templates/InzApp/uzytkownicy.html
@@ -51,7 +51,10 @@
 				<td style="font-weight: bold;">
 					{{ uzytkownik.login }}
 					{% if uzytkownik.jest_administratorem == True %}
-					<i class="fa fa-star-o" title="administrator"></i> 
+					<!-- <i class="fa fa-star-o" title="administrator"></i> -->
+					<a tip="jest administratorem" class="tooltip">
+					<i class="fa fa-star-o"></i>
+					</a>
 					{% endif %}
 				</td>
 				<td>{{ uzytkownik.email }}</td>
