add public collections

--- a/InzApp/templates/InzApp/layout.html
+++ b/InzApp/templates/InzApp/layout.html
@@ -69,7 +69,7 @@
 						Publikacje</a></li>
 						<li><a href="{% url 'moje_publikacje' %}">Moje publikacje</a></li>
 						<li><a href="{% url 'dodaj_publikacje' %}">Dodaj publikację</a></li>
-						<li><a href="#"><i class="fa fa-object-group fa-fw fa-lg"></i>
+						<li><a href="{% url 'kolekcje' %}"><i class="fa fa-object-group fa-fw fa-lg"></i>
 						Kolekcje</a></li>
 						<li><a href="{% url 'moje_kolekcje' %}">Moje kolekcje</a></li>
 						<li><a href="{% url 'dodaj_kolekcje' %}">Dodaj kolekcję</a></li>
